[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/ui/themes/options.theme" type="Theme" id=1]
[ext_resource path="res://assets/ui/Button_Pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Button_Unpressed.png" type="Texture" id=3]
[ext_resource path="res://scripts/UpgradeMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/fonts/Jost-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/fonts/Jost-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ui/icons/upgrade_click.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/icons/upgrade_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/icons/downgrade_click.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/icons/downgrade_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/icons/downgrade.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/icons/upgrade.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/ingame/upgradebar.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/icons/upgrade_health.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/icons/upgrade_strength.png" type="Texture" id=15]
[ext_resource path="res://assets/effects/vignette.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/ingame/upgradebar_back.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/fonts/Jost-ExtraLight.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://assets/ui/icons/upgrade_speed.png" type="Texture" id=19]

[sub_resource type="Theme" id=2]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int blurSize : hint_range(0,100);

void fragment()
{
COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, float(blurSize)/10.0);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/blurSize = 45

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/ui/fonts/Jost-Light.ttf"

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="UpgradesMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 1620.0
theme = SubResource( 2 )
script = ExtResource( 4 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 6 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="Vignette" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 16 )

[node name="Upgrades" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -95.0
margin_right = 95.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
text = "Upgrades"

[node name="Coins" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -93.0
margin_top = 60.0
margin_right = 93.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 8 )
text = "Coins: 0"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -355.0
margin_right = 787.0
margin_bottom = 366.0

[node name="Main" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1587.0
margin_bottom = 443.0
size_flags_horizontal = 3

[node name="Health" type="Control" parent="ScrollContainer/Main"]
margin_right = 1587.0
margin_bottom = 100.0
rect_min_size = Vector2( 1587, 100 )

[node name="Icon" type="TextureRect" parent="ScrollContainer/Main/Health"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="ScrollContainer/Main/Health"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = -25.0
margin_right = 162.0
margin_bottom = 25.0
theme = ExtResource( 1 )
text = "Health"

[node name="Downgrade" type="TextureButton" parent="ScrollContainer/Main/Health"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 250.0
margin_top = -25.0
margin_right = 282.0
margin_bottom = 7.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="TextureProgress" type="TextureProgress" parent="ScrollContainer/Main/Health"]
anchor_right = 1.0
anchor_bottom = 0.974
margin_left = 340.0
margin_top = 39.0
margin_right = -815.0
margin_bottom = -21.4
max_value = 10.0
value = 1.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 13 )
nine_patch_stretch = true

[node name="Upgrade" type="TextureButton" parent="ScrollContainer/Main/Health"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.5
margin_top = -25.0
margin_right = 38.5
margin_bottom = 7.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="ScrollContainer/Main"]
margin_top = 104.0
margin_right = 1587.0
margin_bottom = 145.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 9 )
text = "Increases your health and max-health by 50 for each level."

[node name="Strength" type="Control" parent="ScrollContainer/Main"]
margin_top = 149.0
margin_right = 1587.0
margin_bottom = 249.0
rect_min_size = Vector2( 1587, 100 )

[node name="Icon" type="TextureRect" parent="ScrollContainer/Main/Strength"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 15 )
expand = true

[node name="Strength" type="Label" parent="ScrollContainer/Main/Strength"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = -25.0
margin_right = 162.0
margin_bottom = 25.0
theme = ExtResource( 1 )
text = "Strength"

[node name="Downgrade" type="TextureButton" parent="ScrollContainer/Main/Strength"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 250.0
margin_top = -25.0
margin_right = 282.0
margin_bottom = 7.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="TextureProgress" type="TextureProgress" parent="ScrollContainer/Main/Strength"]
anchor_right = 1.0
anchor_bottom = 0.974
margin_left = 340.0
margin_top = 39.0
margin_right = -815.0
margin_bottom = -21.4
max_value = 10.0
value = 1.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 13 )
nine_patch_stretch = true

[node name="Upgrade" type="TextureButton" parent="ScrollContainer/Main/Strength"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.5
margin_top = -25.0
margin_right = 38.5
margin_bottom = 7.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label2" type="Label" parent="ScrollContainer/Main"]
margin_top = 253.0
margin_right = 1587.0
margin_bottom = 294.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 9 )
text = "Multiplies your damage by 10 for each level."

[node name="Speed" type="Control" parent="ScrollContainer/Main"]
margin_top = 298.0
margin_right = 1587.0
margin_bottom = 398.0
rect_min_size = Vector2( 1587, 100 )

[node name="Icon" type="TextureRect" parent="ScrollContainer/Main/Speed"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 19 )
expand = true

[node name="Speed" type="Label" parent="ScrollContainer/Main/Speed"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = -25.0
margin_right = 162.0
margin_bottom = 25.0
theme = ExtResource( 1 )
text = "Speed"

[node name="Downgrade" type="TextureButton" parent="ScrollContainer/Main/Speed"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 250.0
margin_top = -25.0
margin_right = 282.0
margin_bottom = 7.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="TextureProgress" type="TextureProgress" parent="ScrollContainer/Main/Speed"]
anchor_right = 1.0
anchor_bottom = 0.974
margin_left = 340.0
margin_top = 39.0
margin_right = -815.0
margin_bottom = -21.4
max_value = 10.0
value = 1.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 13 )
nine_patch_stretch = true

[node name="Upgrade" type="TextureButton" parent="ScrollContainer/Main/Speed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.5
margin_top = -25.0
margin_right = 38.5
margin_bottom = 7.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label3" type="Label" parent="ScrollContainer/Main"]
margin_top = 402.0
margin_right = 1587.0
margin_bottom = 443.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 9 )
text = "Increases your speed by 50 for each level."

[node name="Exit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -30.0
margin_right = 50.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="Exit"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.5
margin_top = -29.0
margin_right = 50.5
custom_fonts/font = SubResource( 1 )
text = "Back"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ScrollContainer/Main/Health/Downgrade" to="." method="_on_Downgrade" binds= [ "health" ]]
[connection signal="pressed" from="ScrollContainer/Main/Health/Upgrade" to="." method="_on_Upgrade" binds= [ "health" ]]
[connection signal="pressed" from="ScrollContainer/Main/Strength/Downgrade" to="." method="_on_Downgrade" binds= [ "strength" ]]
[connection signal="pressed" from="ScrollContainer/Main/Strength/Upgrade" to="." method="_on_Upgrade" binds= [ "strength" ]]
[connection signal="pressed" from="ScrollContainer/Main/Speed/Downgrade" to="." method="_on_Downgrade" binds= [ "speed" ]]
[connection signal="pressed" from="ScrollContainer/Main/Speed/Upgrade" to="." method="_on_Upgrade" binds= [ "speed" ]]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
